fixed the close modal. moved all the inline style to an external stylesheet. removed all the stretch properties.

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -49,8 +49,6 @@
   height: 0px;
   border-radius: 50%;
   box-shadow: 0 0 10px 3px rgb(116, 132, 160);
-  /* 0 0 100px 60px #f0f,
-    0 0 140px 90px #0ff; */
 }
 
 .glow div:nth-child(2) {
@@ -61,8 +59,6 @@
   height: 0px;
   border-radius: 50%;
   box-shadow: 0 0 6px 3px rgb(116, 132, 160);
-  /* 0 0 100px 60px #f0f,
-    0 0 140px 90px #0ff; */
 }
 
 .glow div:nth-child(3) {
@@ -73,8 +69,6 @@
   height: 0px;
   border-radius: 50%;
   box-shadow: 0 0 4px 2px rgb(116, 132, 160);
-  /* 0 0 100px 60px #f0f,
-    0 0 140px 90px #0ff; */
 }
 
 .glow div:nth-child(4) {
@@ -85,8 +79,6 @@
   height: 0px;
   border-radius: 50%;
   box-shadow: 0 0 4px 2px rgb(116, 132, 160);
-  /* 0 0 100px 60px #f0f,
-    0 0 140px 90px #0ff; */
 }
 
 .glow div:nth-child(5) {
@@ -129,30 +121,17 @@
   }
 }
 
-.mat-expansion-panel-header {
-  font-family: overpass, 'Helvetica Neue', sans-serif;
-}
-
-.mat-expansion-panel-header-title {
-  justify-content: end;
-  padding-top: 4px;
-}
-
-.mat-expansion-panel {
-  background: none;
-}
-
 .item-carousels {
   /* padding: 10px; */
   font-size: 12px;
   align-content: center;
-  border: 1px solid white;
+  border: 1px solid $ddx-light;
   border-radius: 8px;
   margin: 0 5px;
 }
 
 #item-carousels-wrapper {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid $ddx-light;
   padding-left: 20px;
   margin-bottom: 5px;
   line-height: 30px;
@@ -169,6 +148,10 @@
 
 #item-carousels-inner-wrapper div:nth-child(2) {
   text-align: right;
+}
+
+#fund-currency-short-name {
+  color: $ddx-yellow;
 }
 
 /* progress bar starts here */
@@ -208,7 +191,7 @@
 
 .box .percent svg circle:nth-child(1) {
   stroke-dashoffset: 90;
-  stroke: #f5aa28;
+  stroke:$ddx-yellow;
 }
 
 .box .percent svg circle:nth-child(2) {
@@ -219,12 +202,12 @@
 
 .box .percent svg circle:nth-child(3) {
   stroke-dashoffset: 510;
-  stroke: #f5aa28;
+  stroke: $ddx-yellow;
 }
 
 .box .percent svg circle:nth-child(4) {
   stroke-dashoffset: 110;
-  stroke: #f5aa28;
+  stroke:$ddx-yellow;
 }
 
 .box .percent .number {
@@ -236,7 +219,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: $ddx-light;
 }
 
 .box .percent .number h2 {
@@ -257,24 +240,57 @@
 }
 
 #percent {
-  color: #f5aa28;
+  color: $ddx-yellow;
   font-size: 1rem;
   text-align: right;
 }
 
 #plan-style {
-  color: #f5aa28;
+  color: $ddx-yellow;
   text-align: center;
   font-weight: lighter;
 }
 
+.card-content-duration div {
+  padding: 0px 10px;
+}
+
+.card-content-duration div:nth-child(2) {
+  text-align: right;
+}
+
+/* expansion panel starts here */
+
 .mat-expansion-panel {
   font-size: 10px;
+  background: none;
+}
+
+.mat-expansion-panel-header {
+  font-family: overpass, 'Helvetica Neue', sans-serif;
+  max-width: 55px;
+  margin: 0 auto;
+}
+
+.mat-expansion-panel-header-title {
+  justify-content: end;
+  padding-top: 4px;
 }
 
 .mat-expansion-panel-body {
   padding: 0;
 }
+
+.expansion-panel-content div:nth-child(1){
+  font-size: 10px;
+}
+
+.expansion-panel-content div:nth-child(2){
+  font-size: 12px;
+  text-align: right;
+}
+
+/* expansion panel ends here */
 
 .button-carousels {
   margin-top: 5px;
@@ -284,7 +300,7 @@
 }
 
 .table-header {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid $ddx-light;
   padding: 25px;
   text-align: left;
 }
@@ -323,7 +339,7 @@ table {
 }
 
 .tableDesign {
-  border: 1px solid white;
+  border: 1px solid $ddx-light;
   box-sizing: border-box;
   border-radius: 5px;
   margin: 20px auto;
